# pywhill

./: LICENSE  README.md  pyproject.toml
example/: cr_example1_joy.py  cr_example2_data.py  cr_example3_callback.py  cr_example4_blink_power.py  cr_example5_hold_joy.py  cr_example6_copy_speed_profile.py  cr_example7_control_by_keyboard.py  cr_example7_control_by_keyboard_for_win.py
example/omnipf/: omnipf_example1_control_by_keyboard_for_win.py
example/webapi/: LICENSE  README.md  app.py  requirements-dev.txt  requirements.txt
script/: whill.py  whill_packet.py
whill/: __init__.py  whill.py  whill_data.py  whill_packet.py
