[tool.poetry]
name = "whill"
version = "1.2.0"
description = "WHILL Model CR SDK for Python"
authors = ["Seiya Shimizu <seiya.shimizu@whill.inc>"]
license = "MIT"
homepage = "https://whill.inc/jp/model-cr"
repository = "https://github.com/WHILL/pywhill"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]
pyserial = "^3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
